--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -15,7 +15,10 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "angular": ">1.2.6",
+    "angular-route": "",
+    "ng-file-upload": "12.0.4"
   },
   "overrides": {
     "bootstrap": {
